# cpp

./: .gitmodules  Makefile  README.md
avx_basic/: Makefile  avx_basic.cpp
cmake_test/: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  add_by.h.input  cmake_test.cpp
cmake_test/add_by_pointer/: CMakeLists.txt  Makefile  add_by_pointer.cpp  add_by_pointer.hpp
cmake_test/add_by_reference/: CMakeLists.txt  Makefile  add_by_reference.cpp  add_by_reference.hpp
cmake_test/add_by_value/: CMakeLists.txt  Makefile  add_by_value.cpp  add_by_value.hpp
data_oriented/: data_oriented.cpp
file_io/: file_io.cpp
function_overloading/: function_overloading.cpp
google_benchmark_arm/: Makefile  google_benchmark_arm.cpp
google_benchmark_basic/: google_benchmark_basic.cpp
hello_world/: hello_world.cpp
memory_allocation/: memory_allocation.cpp
mkl_basic/: Makefile  mkl_basic.cpp
multiple_template_auto/: multiple_template_auto.cpp
oops/: oops.cpp
opencl_basic/: Makefile  opencl_basic.cpp
opencl_benchmark/: kernelAdd.cl  kernelMAD.cl  opencl_benchmark.cpp
operator_overloading/: operator_overloading.cpp
pretty_function/: pretty_function.cpp
pthread_false_sharing/: Makefile  pthread_false_sharing.cpp
ref_val_ptr_compare/: ref_val_ptr_compare.cpp
smart_pointers/: smart_pointers.cpp
